--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="sr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lasersko Čišćenje</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Lasersko Čišćenje - Skidanje Farbe i Rđe</title>
   <style>
     body { margin: 0; font-family: Arial, sans-serif; background: #1e1e2f; color: #fff; }
     header { background: #ff6600; padding: 20px; text-align: center; font-size: 28px; font-weight: bold; }
@@ -13,58 +13,49 @@
     section { padding: 40px 20px; }
     h2 { color: #ff6600; }
     .cta { background: #ff6600; color: #fff; padding: 15px 30px; display: inline-block; margin-top: 20px; text-decoration: none; font-weight: bold; border-radius: 5px; }
-    .services div, .benefits div { margin-bottom: 20px; }
-    .gallery img { width: 100%; max-width: 300px; margin: 10px; border: 3px solid #444; border-radius: 5px; }
-    .contact input, .contact textarea { width: 100%; padding: 10px; margin-bottom: 10px; border-radius: 5px; border: none; }
-    .contact button { padding: 10px 20px; background: #ff6600; border: none; color: #fff; font-weight: bold; border-radius: 5px; }
+    .gallery img { width: 100%; max-width: 400px; margin: 10px auto; display: block; border: 3px solid #444; border-radius: 5px; }
+    .phone { font-size: 20px; margin-top: 20px; text-align: center; }
+    .phone a { color: #ff6600; text-decoration: none; font-weight: bold; }
+    .seo { font-size: 10px; color: #aaa; margin-top: 40px; padding: 0 20px 60px; }
+    footer { background: #111; padding: 20px; text-align: center; font-size: 14px; color: #ccc; }
   </style>
 </head>
 <body>
-  <header>Lasersko Čišćenje - Inovativno Rešenje</header>
-  <nav>
-    <a href="#usluge">Usluge</a>
-    <a href="#prednosti">Prednosti</a>
-    <a href="#galerija">Galerija</a>
-    <a href="#kontakt">Kontakt</a>
-  </nav>
-  <section>
-    <h2>Dobrodošli</h2>
-    <p>Specijalizovani smo za profesionalno lasersko čišćenje svih vrsta površina - bez hemikalija, bez abrazije i bez oštećenja!</p>
-    <a href="#kontakt" class="cta">Zatraži ponudu</a>
-  </section>
-  <section id="usluge">
-    <h2>Naše usluge</h2>
-    <div class="services">
-      <div>Uklanjanje rđe sa metala</div>
-      <div>Čišćenje industrijskih površina</div>
-      <div>Skidanje farbe i premaza</div>
-      <div>Precizno čišćenje kalupa i delova</div>
-    </div>
-  </section>
-  <section id="prednosti">
-    <h2>Zašto lasersko čišćenje?</h2>
-    <div class="benefits">
-      <div>Ekološki i bezbedno</div>
-      <div>Neabrazivna metoda</div>
-      <div>Brza i efikasna primena</div>
-      <div>Bez potrebe za hemikalijama</div>
-    </div>
-  </section>
-  <section id="galerija">
-    <h2>Galerija radova</h2>
-    <div class="gallery">
-      <img src="https://via.placeholder.com/300x200?text=Pre" alt="Pre">
-      <img src="https://via.placeholder.com/300x200?text=Posle" alt="Posle">
-    </div>
-  </section>
-  <section id="kontakt">
-    <h2>Kontaktirajte nas</h2>
-    <form class="contact">
-      <input type="text" placeholder="Vaše ime" required>
-      <input type="email" placeholder="Email adresa" required>
-      <textarea rows="5" placeholder="Poruka"></textarea>
-      <button type="submit">Pošalji</button>
-    </form>
-  </section>
+<div style="position:relative;">
+  <img src="naslovna.jpg" alt="Lasersko čišćenje" style="width:100%; max-height:600px; object-fit:cover;">
+  <h1 style="font-size:36px; text-align:center; color:#fff; padding: 20px 10px 0;">
+    DRVENI NAMEŠTAJ – SKIDANJE LAKA<br/>
+    SKIDANJE FARBE SA METALA<br/>
+    SKIDANJE AUTO BOJE BEZ OŠTEĆENJA
+  </h1>
+</div>
+
+<section style="background-color:#111; color:#fff; padding: 30px 20px; text-align:center;">
+  <h2 style="font-size: 26px;">Mi pružamo inovativne usluge čišćenja</h2>
+  <p style="max-width: 800px; margin: 0 auto; font-size: 18px; line-height: 1.6;">
+    Naša kompanija se specijalizuje za lasersko čišćenje u Beogradu, koristeći najnoviju tehnologiju kako bismo osigurali besprekornu čistoću i zaštitu vaših površina.
+    Bilo da vam je potrebno dubinsko čišćenje starog kamena ili osvežavanje fasada, naš stručni tim je tu da vam pomogne.
+    Kontaktirajte nas danas i uverite se u našu efikasnost i profesionalizam!<br/><br/>
+    Pružamo inovativne usluge čišćenja, uključujući vrhunsko lasersko čišćenje, čime unapređujemo standarde higijene i održavanja u Beogradu.
+    Naš cilj je da vaši prostori blistaju, zato nas kontaktirajte i uverite se zašto smo najbolji izbor!
+  </p>
+</section>
+
+<section id="kontakt">
+  <h2>Kontakt</h2>
+  <p class="phone">Pozovite nas: <a href="tel:+381601555850">+381 60 155 5850</a></p>
+  <p class="phone"><a href="https://wa.me/381601555850" target="_blank">Piši na WhatsApp</a></p>
+</section>
+
+<section class="seo">
+  <p>
+    reparacija metalnog nameštaja, alu stolarija, drvena stolarija, stolica, prozori, vitrine, regali, livene peći, smederevac šporeta, gusani delovi, čišćenje alu felni, čišćenje motora, auspuha, grane motora, glave motora, bloka motora, čišćenje čopera, čišćenje antikviteta, čišćenje skulptura, starih spomenika, lustera, posuđa, escajga, bronze, mesinga, bakra, inoksa (prohroma), nerđajućeg čelika, skidanje kamenca, čišćenje roštilja od gareži, masnoće, ulja, granita, mermera, kamena, kristala, starih pušaka, pištolja, sablji, jatagana, ćupova, vaza, oldtajmera, automobila, motora, hladnjaka, plastike, TA peći, laminatora, pokretnih traka, trafoa, rashladne opreme, ugostiteljske i mesarske opreme, friteza, grejača, miksera, mešalica, industrijskih površina, poliranje prohroma, kupovina starih kovanih kapija i ograda...
+    Beograd, Novi Sad, Niš, Subotica, Kragujevac, Pančevo, Zrenjanin, Sombor, Čačak, Užice, Leskovac, Kraljevo, Kruševac, Jagodina, Bor, Valjevo, Vranje, Vršac, Zaječar, Kikinda, Pirot, Požarevac, Prokuplje i sva sela i mesta u Srbiji, Zadruga, Novak Đoković, tenis, Jokić, NBA, estrada, rijaliti, sport uživo, trending...
+  </p>
+</section>
+
+<footer>
+  &copy; 2024 Lasersko Čišćenje | dmatejic36@gmail.com | +381 60 155 5850
+</footer>
 </body>
 </html>
